[metadata]
name = hearthsim_instrumentation
version = 0.1.0
description = HearthSim instrumentation common library
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/hearthsim-instrumentation/
download_url = https://github.com/HearthSim/hearthsim-instrumentation/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
zip_safe = True
install_requires =
	boto3
	influxdb

[options.packages.find]
exclude =
	tests
