[metadata]
name = hearthsim-instrumentation
version = 0.1.0
description = HearthSim instrumentation common library
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/hearthsim-instrumentation/
download_url = https://github.com/HearthSim/hearthsim-instrumentation/tarball/master
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment
	Topic :: Internet :: WWW/HTTP

[options]
packages =
	hearthsim.instrumentation
zip_safe = True
install_requires =
	boto3
	influxdb
